fixed component name overfloww in dynamic

--- a/frontend/packages/ux-editor/src/components/config/Expressions/Expressions.module.css
+++ b/frontend/packages/ux-editor/src/components/config/Expressions/Expressions.module.css
@@ -14,3 +14,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+.placeHolder {
+  display: grid;
+}
